Update api schemas and implement ae session status integration
